Issue #552 courses page title spacing

--- a/web/themes/custom/gpw/src/components/courses/_blocks.scss
+++ b/web/themes/custom/gpw/src/components/courses/_blocks.scss
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 2.5rem;
     text-transform: uppercase;
+    margin-bottom: 3rem;
   }
 
   .view-content {
